src/objects/Application__c.object
<CustomObject>
    <description>Application</description>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>Alternate_Contact__r.Agency_Name__c</formula>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Name__c</fullName>
        <formula>Alternate_Contact__r.First_Name__c + &apos; &apos; + Alternate_Contact__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone_Type__c</fullName>
        <formula>TEXT( Alternate_Contact__r.Phone_Type__c )</formula>
        <label>Alternate Contact Phone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone__c</fullName>
        <description>The alternate contact phone # for this application</description>
        <formula>Alternate_Contact__r.Phone__c</formula>
        <label>Alternate Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Type__c</fullName>
        <description>The type of person that this alternate contact is.</description>
        <formula>TEXT( Alternate_Contact__r.Alternate_Contact_Type__c )</formula>
        <inlineHelpText>The alternate contact&apos;s relationship to the primary applicant.</inlineHelpText>
        <label>Alternate Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The alternate contact for this application</description>
        <inlineHelpText>Someone who can be contacted in place of the Primary Applicant.</inlineHelpText>
        <label>Alternate Contact</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (Alternate Contact)</relationshipLabel>
        <relationshipName>Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary applicant of the application</description>
        <inlineHelpText>Select the primary applicant for this application</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (Applicant)</relationshipLabel>
        <relationshipName>Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Auto_Count__c</fullName>
        <description>Field used to count Applications for declarative roll up summary (SUM) of Application records on the Listing object.</description>
        <formula>IF( ISNULL( Listing__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Auto Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Language__c</fullName>
        <description>Language of the application</description>
        <inlineHelpText>Language used to fill out this application</inlineHelpText>
        <label>Application Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Submission_Type__c</fullName>
        <description>Field to determine how an application was submitted: via electronic or paper means.  If paper is submitted, a Leasing Agent user is required to be identified as the user who entered it.</description>
        <inlineHelpText>Please indicate the method by which this application was submitted to SF MOHCD.</inlineHelpText>
        <label>Application Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <description>Date of submittal</description>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COP_Preference_Manual__c</fullName>
        <description>Primary applicant holds COP - manual overrride for MSOL</description>
        <inlineHelpText>Certificate of Preference</inlineHelpText>
        <label>COP Preference Manual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Valid - Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COP_Preference_Member_DOB__c</fullName>
        <formula>COP_Preference_Member__r.Date_of_Birth__c</formula>
        <label>COP Preference Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COP_Preference_Member_Name__c</fullName>
        <formula>COP_Preference_Member__r.First_Name__c + &apos; &apos; + COP_Preference_Member__r.Last_Name__c</formula>
        <label>COP Preference Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COP_Preference_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An related application member that holds a COP preference</description>
        <label>COP Preference Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COP_Preference_Rank__c</fullName>
        <label>COP Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COP_Preference__c</fullName>
        <formula>/*OLD - Replaced 8/16 based on underlying field change IF( OR(NOT(ISBLANK(COP_Preference_Member__c)),   COP_Preference_Manual__c  ) , true, false)*/


IF(
  OR(
    AND(NOT(ISBLANK(COP_Preference_Member__c)), ISPICKVAL(COP_Preference_Manual__c, &apos;&apos;)),
    AND(NOT(ISBLANK(COP_Preference_Member__c)), ISPICKVAL(COP_Preference_Manual__c, &apos;Unconfirmed&apos;)), 
    AND(NOT(ISBLANK(COP_Preference_Member__c)), ISPICKVAL(COP_Preference_Manual__c, &apos;Valid&apos;)),
    ISPICKVAL(COP_Preference_Manual__c, &apos;Valid - Added&apos;)
    ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COP Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conflict_Number__c</fullName>
        <label>Conflict Number</label>
        <summaryFilterItems>
            <field>Flagged_Application__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>Reviewed - Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>Flagged_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTHP_Preference_Manual__c</fullName>
        <description>Displaced tenant DTHP Preference Manual</description>
        <inlineHelpText>Displaced Tenant Housing Preference</inlineHelpText>
        <label>DTHP Preference Manual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Valid - Added</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTHP_Preference_Member_DOB__c</fullName>
        <formula>DTHP_Preference_Member__r.Date_of_Birth__c</formula>
        <label>DTHP Preference Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTHP_Preference_Member_Name__c</fullName>
        <formula>DTHP_Preference_Member__r.First_Name__c + &apos; &apos; + DTHP_Preference_Member__r.Last_Name__c</formula>
        <label>DTHP Preference Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTHP_Preference_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An application member that holds a DTHP preference</description>
        <label>DTHP Preference Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (DTHP Preference Member)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTHP_Preference_Rank__c</fullName>
        <label>DTHP Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTHP_Preference__c</fullName>
        <formula>/*OLD - Removed 8/16 based on underlying field changes IF( OR(NOT(ISBLANK( DTHP_Preference_Member__c )),     DTHP_Preference_Manual__c    ) , true, false)*/

IF(
  OR(
    AND(NOT(ISBLANK(DTHP_Preference_Member__c)), ISPICKVAL(DTHP_Preference_Manual__c, &apos;&apos;)),
    AND(NOT(ISBLANK(DTHP_Preference_Member__c)), ISPICKVAL(DTHP_Preference_Manual__c, &apos;Unconfirmed&apos;)), 
    AND(NOT(ISBLANK(DTHP_Preference_Member__c)), ISPICKVAL(DTHP_Preference_Manual__c, &apos;Valid&apos;)),
    ISPICKVAL(DTHP_Preference_Manual__c, &apos;Valid - Added&apos;)
    ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTHP Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <description>Primary applicant date of birth</description>
        <formula>Applicant__r.Date_of_Birth__c</formula>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Primary applicant email address</description>
        <formula>Applicant__r.Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Primary Applicant Ethnicity</description>
        <formula>TEXT( Applicant__r.Ethnicity__c )</formula>
        <label>Ethnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Primary applicant first name</description>
        <formula>Applicant__r.First_Name__c</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Metadata__c</fullName>
        <label>Form Metadata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Primary Applicant Gender</description>
        <formula>IF(ISPICKVAL( Applicant__r.Gender__c, &quot;Male&quot;), &quot;Male&quot;,
IF(ISPICKVAL( Applicant__r.Gender__c , &quot;Female&quot;), &quot;Female&quot;,
IF(ISPICKVAL( Applicant__r.Gender__c , &quot;Trans Male&quot;), &quot;Trans Male&quot;,
IF(ISPICKVAL( Applicant__r.Gender__c , &quot;Trans Female&quot;), &quot;Trans Female&quot;,
IF(ISPICKVAL( Applicant__r.Gender__c , &quot;Not Listed&quot;), Applicant__r.Gender_Other__c,
IF(ISPICKVAL( Applicant__r.Gender__c, &quot;Decline to State&quot;), &quot;Decline to State&quot;, NULL))))))</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Lottery_Rank__c</fullName>
        <label>General Lottery Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Lottery__c</fullName>
        <formula>NOT(OR(DTHP_Preference__c,Live_Work_Preference__c,COP_Preference__c, Neighborhood_Preference__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Lottery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Voucher_or_Subsidy__c</fullName>
        <label>Housing Voucher or Subsidy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Lottery_Complete__c</fullName>
        <formula>IF(ISPICKVAL( Listing__r.Lottery_Status__c, &apos;Lottery Complete&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lottery Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_Alice_Griffith__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-Alice Griffith</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_Applicant_Full_Name__c</fullName>
        <label>L-Applicant Full Name</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_COP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-COP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_DTHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-DTHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_Date_of_Birth__c</fullName>
        <label>L-Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L_Listing_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-Listing Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_LiveWork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-LiveWork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_Lottery_Number__c</fullName>
        <label>L-Lottery Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_NRHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-NRHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_RB_AH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L-RB/AH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Primary applicant last name</description>
        <formula>Applicant__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <description>The Listing that is being applied for</description>
        <inlineHelpText>The associated listing for this application</inlineHelpText>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Live_Work_Preference_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Live work manual preference override for msol</description>
        <label>Live/Work Preference Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Work_Preference_Rank__c</fullName>
        <label>Live/Work Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Work_Preference__c</fullName>
        <formula>IF( OR(NOT(ISBLANK(Live_in_SF_Preference_Member__c)), NOT(ISBLANK(Work_in_SF_Preference_Member__c)), Live_Work_Preference_Paper__c  ) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live/Work Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_in_SF_Preference_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live in SF Preference Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (Live in SF Preference Member)</relationshipLabel>
        <relationshipName>Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_in_SF_Preference_Proof__c</fullName>
        <label>Live in SF Preference Proof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone bill</fullName>
                </value>
                <value>
                    <fullName>Cable and internet bill</fullName>
                </value>
                <value>
                    <fullName>Gas bill</fullName>
                </value>
                <value>
                    <fullName>Electric bill</fullName>
                </value>
                <value>
                    <fullName>Garbage bill</fullName>
                </value>
                <value>
                    <fullName>Water bill</fullName>
                </value>
                <value>
                    <fullName>Paystub</fullName>
                </value>
                <value>
                    <fullName>Public benefits record</fullName>
                </value>
                <value>
                    <fullName>School record</fullName>
                </value>
                <value>
                    <fullName>Paystub with employer address</fullName>
                </value>
                <value>
                    <fullName>Letter from employer</fullName>
                </value>
                <value>
                    <fullName>Third-Party Proof of SF Homelessness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live_in_SF_Preference_Rank__c</fullName>
        <label>Live in SF Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lottery_Number_Manual__c</fullName>
        <description>Temporary field to use for uploading temp applications to run through the lottery. This will be used to link Salesforce applications, to those that are sent to the MOHCD from others.</description>
        <label>Lottery Number Manual</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Number__c</fullName>
        <formula>IF(ISBLANK( Lottery_Number_Manual__c ), RIGHT( Name , 8), Lottery_Number_Manual__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lottery Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Rank__c</fullName>
        <description>Returned lottery number rank</description>
        <label>Lottery Rank (Unsorted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lottery_Status__c</fullName>
        <inlineHelpText>The status of this application as related to the lottery</inlineHelpText>
        <label>Lottery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Lottery</fullName>
                </value>
                <value>
                    <fullName>Non-Winner</fullName>
                </value>
                <value>
                    <fullName>Winner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>Primary Applicant Mailing Address</description>
        <formula>Applicant__r.Mailing_Address__c</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Primary applicant middle name</description>
        <formula>Applicant__r.Middle_Name__c</formula>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(Neighborhood_Preference_Member__r.Street__c)),Neighborhood_Preference_Member__r.Street__c + &apos;, &apos; + Neighborhood_Preference_Member__r.City__c + &apos;, &apos; + Neighborhood_Preference_Member__r.State__c + &apos;, &apos; + Neighborhood_Preference_Member__r.Zip_Code__c, &apos;&apos;)</formula>
        <label>Neighborhood Preference Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference_Manual__c</fullName>
        <description>Neighborhood manual preference override for msol</description>
        <label>Neighborhood Preference Manual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Valid Address</fullName>
                </value>
                <value>
                    <fullName>Invalid Address</fullName>
                </value>
                <value>
                    <fullName>Valid Address - Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An application member who has the neighborhood preference</description>
        <label>Neighborhood Preference Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (Neighborhood Preference Member)</relationshipLabel>
        <relationshipName>Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference_Proof__c</fullName>
        <label>Neighborhood Preference Proof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone bill</fullName>
                </value>
                <value>
                    <fullName>Cable and internet bill</fullName>
                </value>
                <value>
                    <fullName>Gas bill</fullName>
                </value>
                <value>
                    <fullName>Electric bill</fullName>
                </value>
                <value>
                    <fullName>Garbage bill</fullName>
                </value>
                <value>
                    <fullName>Water bill</fullName>
                </value>
                <value>
                    <fullName>Paystub</fullName>
                </value>
                <value>
                    <fullName>Public benefits record</fullName>
                </value>
                <value>
                    <fullName>School record</fullName>
                </value>
                <value>
                    <fullName>Paystub with employer address</fullName>
                </value>
                <value>
                    <fullName>Letter from employer</fullName>
                </value>
                <value>
                    <fullName>Third-Party Proof of SF Homelessness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference_Rank__c</fullName>
        <label>Neighborhood Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neighborhood_Preference__c</fullName>
        <formula>/*OLD - Removed 8/16 based on underlying field changes IF( OR(NOT(ISBLANK(  Neighborhood_Preference_Member__c  )),  Neighborhood_Preference_Manual__c  ) , true, false)*/

IF(
  OR(
    AND(NOT(ISBLANK(Neighborhood_Preference_Member__c)), ISPICKVAL(Neighborhood_Preference_Manual__c, &apos;&apos;)),
    AND(NOT(ISBLANK(Neighborhood_Preference_Member__c)), ISPICKVAL(Neighborhood_Preference_Manual__c, &apos;Unconfirmed&apos;)), 
    AND(NOT(ISBLANK(Neighborhood_Preference_Member__c)), ISPICKVAL(Neighborhood_Preference_Manual__c, &apos;Valid Address&apos;)),
    ISPICKVAL(Neighborhood_Preference_Manual__c, &apos;Valid Address - Added&apos;)
    ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neighborhood Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Flags__c</fullName>
        <label>Number of Flags</label>
        <summaryForeignKey>Flagged_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <description>Primary applicant phone type</description>
        <formula>TEXT(Applicant__r.Phone_Type__c)</formula>
        <label>Phone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Primary applicant phone</description>
        <formula>Applicant__r.Phone__c</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary applicant on the application</description>
        <inlineHelpText>Select the primary applicant for this application</inlineHelpText>
        <label>Applicant</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Applicant_Household__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Primary Applicant)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <description>Primary Applicant Primary Language</description>
        <formula>TEXT( Applicant__r.Primary_Language__c )</formula>
        <label>Primary Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Primary Applicant Race</description>
        <formula>TEXT(Applicant__r.Race__c)</formula>
        <label>Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>MOHCD Website</fullName>
                </value>
                <value>
                    <fullName>Developer Website</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Email Alert</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Housing Counselor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residence_Address__c</fullName>
        <description>Primary Applicant Residence Address</description>
        <formula>Applicant__r.Residence_Address__c</formula>
        <label>Residence Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Phone_Type__c</fullName>
        <description>Primary applicant second phone type</description>
        <formula>TEXT( Applicant__r.Second_Phone_Type__c )</formula>
        <label>Second Phone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <description>Primary applicant second phone</description>
        <formula>Applicant__r.Second_Phone__c</formula>
        <label>Second Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stats of application</description>
        <inlineHelpText>The current status of this application</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User agreed online to terms of application submittal</description>
        <inlineHelpText>The user agreed to the terms of submitting this application.</inlineHelpText>
        <label>Terms Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Household_Gross_Income__c</fullName>
        <description>Total Household Gross Income</description>
        <inlineHelpText>All pre-tax income (wages, benefits, and other sources) from every household member.</inlineHelpText>
        <label>X Total Household Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Size_Entered__c</fullName>
        <description>Total household size entered on application (not calculated from household rollup)</description>
        <label>Total Household Size Entered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Household_Size__c</fullName>
        <label>Total Household Size</label>
        <summarizedField>Application_Member__c.Application_Household_Auto_Number__c</summarizedField>
        <summaryFilterItems>
            <field>Application_Member__c.Type__c</field>
            <operation>equals</operation>
            <value>Primary Applicant, Household Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Member__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_in_SF_Count__c</fullName>
        <label>Work in SF Count</label>
        <summaryFilterItems>
            <field>Application_Member__c.Work_in_SF__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Member__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_in_SF_Preference_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work in SF Preference Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (Work in SF Preference Member)</relationshipLabel>
        <relationshipName>Applications7</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>